finish task for module8-task1

--- a/css/style.css
+++ b/css/style.css
@@ -641,6 +641,10 @@ fieldset {
           box-shadow: 0 0 2px 2px #ff6547;
 }
 
+#title:invalid:required,
+#price:invalid:required {
+  border: 2px solid red;
+}
 
 /* Футер
    ========================================================================== */
